
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int hThread; } ;
typedef scalar_t__ HWND ;
typedef void* DWORD ;


 int CreateProcess (int *,char*,int *,int *,int ,int ,int *,int *,int *,TYPE_1__*) ;
 scalar_t__ FindWindow (int *,char*) ;
 int SendMessage (scalar_t__,int ,int ,int ) ;
 int SetEvent (int ) ;
 int Sleep (int) ;
 int TerminateThread (int ,int ) ;
 int WM_CLOSE ;
 void* aaa ;
 void* bbb ;
 TYPE_1__ cpi ;
 int cps ;
 int e1 ;
 int e2 ;

void w(DWORD a,DWORD d){
 HWND h;
 aaa=d;
 bbb=a;
 SetEvent(e1);
 do{h=FindWindow(((void*)0),"erasmus1");}while(!h);
 CreateProcess(((void*)0),"notepad",((void*)0),((void*)0),0,0,((void*)0),((void*)0),&cps,
 &cpi);
 Sleep(100);
 SendMessage(h,WM_CLOSE,0,0);
 Sleep(100);
 SetEvent(e2);
 do{h=FindWindow(((void*)0),"erasmus2");}while(!h);
 TerminateThread(cpi.hThread,0);
 Sleep(100);
 CreateProcess(((void*)0),"notepad",((void*)0),((void*)0),0,0,((void*)0),((void*)0),&cps,
 &cpi);
 Sleep(100);
 SendMessage(h,WM_CLOSE,0,0);
 Sleep(100);
}
